package entity.base;

public interface Choppable {
    public void chop();
    public boolean isChopped();
}
