@startuml
class entity.container.Pan {
+ boolean verifyContent(Ingredient)
+ void cook()
}

interface entity.base.Cookable {
+ void cook()
+ boolean isBurnt()
}

class entity.counter.Crate {
- String myIngredient
+ void interact(Player)
+ String getMyIngredient()
+ void setMyIngredient(String)
}


class entity.counter.Stove {
+ void interact(Player)
+ void update()
}

class entity.ingredient.Egg {
- int cookedPercentage
+ void cook()
+ boolean isBurnt()
+ String toString()
+ int getCookedPercentage()
+ void setCookedPercentage(int)
}


class entity.counter.ChoppingBoard {
+ void interact(Player)
}

class entity.ingredient.Meat {
- boolean chopState
- int cookedPercentage
+ void chop()
+ boolean isChopped()
+ void cook()
+ boolean isBurnt()
+ String toString()
+ int getCookedPercentage()
+ void setCookedPercentage(int)
}


class entity.counter.Bin {
+ void interact(Player)
}

class entity.counter.DishWasher {
+ void interact(Player)
+ void update()
}

class entity.ingredient.Lettuce {
- boolean chopState
+ void chop()
+ boolean isChopped()
}


interface entity.base.Updatable {
+ void update()
}

class entity.container.Dish {
- int dirty
+ boolean isDirty()
+ boolean verifyContent(Ingredient)
+ void setDirty(int)
+ void clean(int)
+ String toString()
+ int getDirty()
}


interface entity.base.Choppable {
+ void chop()
+ boolean isChopped()
}



entity.base.Container <|-- entity.container.Pan
entity.counter.Counter <|-- entity.counter.Crate
entity.counter.Counter <|-- entity.counter.Stove
entity.base.Cookable <|.. entity.ingredient.Egg
entity.base.Ingredient <|-- entity.ingredient.Egg
entity.counter.Counter <|-- entity.counter.ChoppingBoard
entity.base.Choppable <|.. entity.ingredient.Meat
entity.base.Cookable <|.. entity.ingredient.Meat
entity.base.Ingredient <|-- entity.ingredient.Meat
entity.counter.Counter <|-- entity.counter.Bin
entity.counter.Counter <|-- entity.counter.DishWasher
entity.base.Choppable <|.. entity.ingredient.Lettuce
entity.base.Ingredient <|-- entity.ingredient.Lettuce
entity.base.Container <|-- entity.container.Dish
@enduml